# BussinesCaseJota

./: .gitignore  README.md  TODO  pyproject.toml
.github/workflows/: deploy.yaml
docker/: dev_up.sh  docker-compose.yaml  down.sh  up.sh
docker/celery_beat/: Dockerfile  entrypoint.sh
docker/celery_worker/: Dockerfile  celery_worker.env  entrypoint.sh
docker/portal_jota/: Dockerfile  entrypoint.sh  portal_jota.env
docker/postgres/: postgres.env
docker/rabbitmq/: rabbitmq.env
docker/redis/: entrypoint.sh  redis.conf  redis.env
portal_jota/: manage.py
portal_jota/api_portal_jota/: apps.py  errors.py  permissions.py  types.py  urls.py
portal_jota/api_portal_jota/enums/: better_text_choices.py  email_type_enum.py  plan_enum.py  status_noticia_enum.py  status_noticia_imagem_enum.py  user_role_enum.py  vertical_enum.py
portal_jota/api_portal_jota/migrations/: 0001_initial.py  0002_alter_userplanschema_cd_user.py  0003_rename_categorias_userplanschema_verticais.py  0004_alter_noticiaschema_imagem.py  0005_alter_noticiaschema_autor.py  0006_alter_noticiaschema_data_publicacao.py  0007_noticiaschema_imagem_foi_processada.py  0008_alter_noticiaschema_imagem_and_more.py  0009_alter_noticiaschema_imagem.py  0010_remove_noticiaschema_imagem_foi_processada_and_more.py  0011_alter_noticiaschema_status.py
portal_jota/api_portal_jota/models/: __init__.py  noticia_schema.py  user_plan_schema.py  user_schema.py  vertical_schema.py
portal_jota/portal_jota/: asgi.py  celery.py  custom_token_obtain.py  settings.py  urls.py  wsgi.py
(+37 files in other folders)
